# DeepMiner

./: CMakeLists.txt  GameField.cpp  GameField.h  main.cpp
Bots/: Miner.cpp  Miner.h  MinerBotsFabrik.cpp  MinerBotsFabrik.h
Defaults/: defaults.cpp  defaults.h
